Feat: update /chats GET to return only last message per chat